--- a/dbinspector/src/main/res/layout/dbinspector_dialog_remove_database.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_dialog_remove_database.xml
@@ -27,7 +27,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/removeButton"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            style="@style/Widget.Material3.Button.OutlinedButton"
             android:layout_width="match_parent"
             android:layout_height="?attr/listPreferredItemHeightSmall"
             android:layout_marginTop="24dp"
