--- a/dbinspector/src/main/res/layout/dbinspector_item_cell.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_item_cell.xml
@@ -13,7 +13,7 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/valueView"
-        style="@style/TextAppearance.MaterialComponents.Caption"
+        style="@style/TextAppearance.Material3.BodySmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -26,7 +26,7 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/truncatedIndicator"
-        style="@style/TextAppearance.MaterialComponents.Caption"
+        style="@style/TextAppearance.Material3.BodySmall"
         android:layout_width="wrap_content"
         android:layout_height="16dp"
         android:layout_gravity="center_horizontal|bottom"
