--- a/dbinspector/src/main/res/layout-land/dbinspector_activity_edit.xml
+++ b/dbinspector/src/main/res/layout-land/dbinspector_activity_edit.xml
@@ -7,7 +7,6 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
         app:liftOnScroll="true"
         app:liftOnScrollTargetViewId="@id/scrollView">
 
@@ -83,7 +82,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/suggestionButton"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    style="@style/Widget.Material3.Button.OutlinedButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
@@ -108,7 +107,7 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/errorView"
-                style="@style/TextAppearance.MaterialComponents.Body2"
+                style="@style/TextAppearance.Material3.BodyMedium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawablePadding="12dp"
@@ -119,7 +118,7 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/affectedRowsView"
-                style="@style/TextAppearance.MaterialComponents.Body2"
+                style="@style/TextAppearance.Material3.BodyMedium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
