--- a/dbinspector/src/main/res/layout/dbinspector_item_header.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_item_header.xml
@@ -7,7 +7,7 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/valueView"
-        style="@style/TextAppearance.MaterialComponents.Caption"
+        style="@style/TextAppearance.Material3.BodySmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
