--- a/dbinspector/src/main/res/layout/dbinspector_item_keyword.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_item_keyword.xml
@@ -5,7 +5,7 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/keywordView"
-        style="@style/TextAppearance.MaterialComponents.Caption"
+        style="@style/TextAppearance.Material3.BodySmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="1dp"
