--- a/dbinspector/src/main/res/values/themes.xml
+++ b/dbinspector/src/main/res/values/themes.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="DbInspector.BaseTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="DbInspector.BaseTheme" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/dbinspector_color_primary</item>
-        <item name="colorPrimaryDark">@color/dbinspector_color_primary_dark</item>
-        <item name="colorSecondary">@color/dbinspector_color_primary</item>
-        <item name="colorOnSecondary">@android:color/white</item>
+        <item name="colorPrimaryContainer">@color/dbinspector_color_primary_container</item>
+        <item name="colorSecondary">@color/dbinspector_color_secondary</item>
+        <item name="colorOnPrimaryContainer">@color/dbinspector_color_primary_on_container</item>
+        <item name="colorSecondaryContainer">@color/dbinspector_color_secondary_container</item>
+        <item name="colorOnSecondaryContainer">@color/dbinspector_color_secondary_on_container</item>
         <item name="bottomSheetDialogTheme">@style/DbInspector.Theme.BottomSheetDialog</item>
-        <item name="android:statusBarColor">@color/dbinspector_status_bar</item>
     </style>
 
-    <style name="DbInspector.ToggleButton" parent="@style/Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="android:textSize">12sp</item>
+    <style name="DbInspector.ToggleButton" parent="@style/Widget.Material3.Button.OutlinedButton">
         <item name="cornerRadius">@dimen/dbinspector_toggle_button_corner_radius</item>
         <item name="android:layout_height">@dimen/dbinspector_toggle_button_size</item>
     </style>
 
-    <style name="DbInspector.Theme.BottomSheetDialog" parent="@style/ThemeOverlay.MaterialComponents.BottomSheetDialog">
+    <style name="DbInspector.Theme.BottomSheetDialog" parent="@style/ThemeOverlay.Material3.BottomSheetDialog">
         <item name="bottomSheetStyle">@style/DbInspector.Theme.BottomSheetDialog.Style</item>
     </style>
 
-    <style name="DbInspector.Theme.BottomSheetDialog.Style" parent="Widget.MaterialComponents.BottomSheet">
+    <style name="DbInspector.Theme.BottomSheetDialog.Style" parent="Widget.Material3.BottomSheet">
         <item name="shapeAppearanceOverlay">@style/DbInspector.ShapeAppearanceOverlay.BottomSheet
         </item>
     </style>
