--- a/sample/src/main/res/values/themes.xml
+++ b/sample/src/main/res/values/themes.xml
@@ -1,8 +1,7 @@
 <resources>
 
-    <style name="AppTheme" parent="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="AppTheme" parent="@style/Theme.Material3.DayNight">
         <item name="colorPrimary">#0f80cc</item>
-        <item name="colorPrimaryDark">#003b57</item>
     </style>
 
 </resources>
