--- a/dbinspector-client/src/app/databases/databases.component.css
+++ b/dbinspector-client/src/app/databases/databases.component.css
@@ -28,3 +28,7 @@ mat-card {
   background-color: #efefef;
   box-shadow: 0 3px 5px -1px #0003, 0 6px 10px #00000024, 0 1px 18px #0000001f;
 }
+
+.multiline {
+  word-break: break-all;
+}
