Implement download database.

--- a/dbinspector-client/src/app/databases/databases.component.css
+++ b/dbinspector-client/src/app/databases/databases.component.css
@@ -32,3 +32,12 @@ mat-card {
 .multiline {
   word-break: break-all;
 }
+
+.subtitle {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+.centered {
+  margin-bottom: 0;
+}
