Implement rename database.

--- a/dbinspector-client/src/app/databases/databases.component.html
+++ b/dbinspector-client/src/app/databases/databases.component.html
@@ -20,7 +20,7 @@
       <button mat-icon-button aria-label="Remove" (click)="showDeleteSheet(database)">
         <mat-icon>delete_outline</mat-icon>
       </button>
-      <button mat-icon-button aria-label="Rename">
+      <button mat-icon-button aria-label="Edit" (click)="showEditSheet(database)">
         <mat-icon>edit</mat-icon>
       </button>
       <button mat-icon-button aria-label="Copy" (click)="duplicateDatabase(database)">
