--- a/dbinspector-client/src/app/view/view.component.html
+++ b/dbinspector-client/src/app/view/view.component.html
@@ -3,7 +3,7 @@
     <mat-icon>arrow_back</mat-icon>
   </button>
   <div class="mat-typography toolbar-text">
-    <h2>Table</h2>
+    <h2>View</h2>
     <p>{{databaseName}} → {{schemaName}}</p>
   </div>
   <span class="toolbar-menu-spacer"></span>
