Replace bottom sheet with dialogs

--- a/dbinspector-client/src/app/databases/databases.component.html
+++ b/dbinspector-client/src/app/databases/databases.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar class="app-toolbar" color="primary">
-  <div class="mat-typography">
+  <button mat-icon-button aria-label="Github" (click)="github()">
+    <mat-icon>github</mat-icon>
+  </button>
+  <div class="mat-typography toolbar-text">
     <h2>DbInspector</h2>
     <p>Databases</p>
   </div>
