--- a/dbinspector-client/src/app/databases/databases.component.css
+++ b/dbinspector-client/src/app/databases/databases.component.css
@@ -5,6 +5,11 @@
   z-index: 1000; /* Ensure that your app's content doesn't overlap the toolbar */
 }
 
+.toolbar-text {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
 .toolbar-menu-spacer {
   flex: 1 1 auto;
 }
