--- a/dbinspector-client/src/styles.scss
+++ b/dbinspector-client/src/styles.scss
@@ -6,7 +6,7 @@ $dbinspector-primary: mat.define-palette(mat.$light-blue-palette);
 $dbinspector-accent: mat.define-palette(mat.$light-blue-palette, A200, A100, A400);
 $dbinspector-warn: mat.define-palette(mat.$red-palette);
 
-$dbinspector-theme: mat.define-light-theme(
+$dbinspector-light-theme: mat.define-light-theme(
     (
       color: (
         primary: $dbinspector-primary,
@@ -16,7 +16,21 @@ $dbinspector-theme: mat.define-light-theme(
     )
 );
 
-@include mat.all-component-themes($dbinspector-theme);
+$dbinspector-dark-theme: mat.define-dark-theme(
+    (
+      color: (
+        primary: $dbinspector-primary,
+        accent: $dbinspector-accent,
+        warn: $dbinspector-warn,
+      ),
+    )
+);
+
+@include mat.all-component-themes($dbinspector-light-theme);
+
+//.darkMode {
+//  @include mat.all-component-colors($dbinspector-dark-theme);
+//}
 
 html,
 body {
@@ -26,4 +40,3 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-
