--- a/dbinspector-client/src/app/databases/databases.component.html
+++ b/dbinspector-client/src/app/databases/databases.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="app-toolbar" color="primary">
   <button mat-icon-button aria-label="Github" (click)="github()">
-    <mat-icon>github</mat-icon>
+    <mat-icon svgIcon="github"></mat-icon>
   </button>
   <div class="mat-typography toolbar-text">
     <h2>DbInspector</h2>
