--- a/dbinspector-client/src/app/view/view.component.html
+++ b/dbinspector-client/src/app/view/view.component.html
@@ -7,8 +7,11 @@
     <p>{{databaseName}} → {{schemaName}}</p>
   </div>
   <span class="toolbar-menu-spacer"></span>
-  <button mat-icon-button aria-label="Search">
-    <mat-icon>search</mat-icon>
+  <button mat-icon-button aria-label="Drop">
+    <mat-icon svgIcon="drop"></mat-icon>
+  </button>
+  <button mat-icon-button aria-label="Pragma">
+    <mat-icon svgIcon="pragma"></mat-icon>
   </button>
 </mat-toolbar>
 <table mat-table [dataSource]="pageRows">
