Implement pragma in Angular.

--- a/dbinspector-client/src/app/table/table.component.html
+++ b/dbinspector-client/src/app/table/table.component.html
@@ -10,7 +10,7 @@
   <button mat-icon-button aria-label="Clear">
     <mat-icon svgIcon="clear"></mat-icon>
   </button>
-  <button mat-icon-button aria-label="Pragma">
+  <button mat-icon-button aria-label="Pragma" (click)="showPragma()">
     <mat-icon svgIcon="pragma"></mat-icon>
   </button>
 </mat-toolbar>
