--- a/dbinspector-client/src/app/view/view.component.html
+++ b/dbinspector-client/src/app/view/view.component.html
@@ -10,7 +10,7 @@
   <button mat-icon-button aria-label="Drop">
     <mat-icon svgIcon="drop"></mat-icon>
   </button>
-  <button mat-icon-button aria-label="Pragma">
+  <button mat-icon-button aria-label="Pragma" (click)="showPragma()">
     <mat-icon svgIcon="pragma"></mat-icon>
   </button>
 </mat-toolbar>
